--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>IIITD ExplorAR</title>
@@ -21,7 +21,7 @@
 <script src="places.js"></script>
 
 <body style='margin: 0; overflow: hidden;'>
-    <div id="splash"></div>
+    <div id="splash" style="width: 100vw; height:100vh; margin: auto;"></div>
     
     <a-scene
         cursor='rayOrigin: mouse; fuse: true; fuseTimeout: 0;'
