--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <!-- Trigger/Open The Modal -->
     <div class="footer">
 
-      <button id="myBtn"><i class="material-icons">home</i></button>
-      <button onclick=""><i class="material-icons">help</i></button> <!-- starts camera and location -->
+      <button ><i class="material-icons">home</i></button>
+      <button id="helpBtn"><i class="material-icons">help</i></button> <!-- starts camera and location -->
     </div>
 
     <!-- The Modal -->
