--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
      <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>IIITD ExplorAR</title>
+    <title>IIIT Delhi ExplorAR</title>
     <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
     <script src='https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js'></script>
-    
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script>
         THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
     </script>
@@ -18,32 +15,31 @@
 <!-- <link rel="stylesheet" href="../../src/location-based/stylesheets/index.css"> -->
 
 <!-- Dynamically add places from Javascript -->
-<script src="places.js"></script>
+
 
 <body style='margin: 0; overflow: hidden;'>
-    <div id="splash" style="width: 100vw; height:100vh; margin: auto;"></div>
+    <!-- <div id="splash" style="width: 100vw; height:100vh; margin: auto;"></div> -->
     
     <a-scene
         cursor='rayOrigin: mouse; fuse: true; fuseTimeout: 0;'
         raycaster="objects: [gps-entity-place];"
         vr-mode-ui="enabled: false"
-		embedded
-		arjs='sourceType: webcam; debugUIEnabled: false;'>
+        embedded
+        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
 
-        <a-camera id="camera" gps-camera="minDistance: 20;" rotation-reader>
-		</a-camera>
-	</a-scene>
+        <a-camera gps-camera="minDistance: 20;" rotation-reader>
+        </a-camera>
+    </a-scene>
 
     <!-- Trigger/Open The Modal -->
-    <div class="footer">
+<!--     <div class="footer">
 
       <button ><i class="material-icons">home</i></button>
-      <button id="helpBtn"><i class="material-icons">help</i></button> <!-- starts camera and location -->
-    </div>
+      <button id="helpBtn"><i class="material-icons">help</i></button>
+    </div> -->
 
     <!-- The Modal -->
-    <div id="myModal" class="modal">
-      <!-- Modal content -->
+<!--     <div id="myModal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
           <span class="close" style="font-size: 28px;font-weight: bold;">&times;</span>
@@ -57,7 +53,10 @@
           <button class="close">Close</button>
         </div>
       </div>
-    </div>
-
-    <script type="text/javascript" src="script.js"></script>
+    </div> -->
+<!-- 
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
+    <script src="places.js"></script><!-- 
+    <script type="text/javascript" src="script.js"></script> -->
 </body>
