debugging error in camera

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     </a-scene>
 
     <!-- Trigger/Open The Modal -->
-    <div class="footer">
+    <!-- <div class="footer">
 
       <button ><i class="material-icons">home</i></button>
       <button id="helpBtn"><i class="material-icons">help</i></button>
-    </div>
+    </div> -->
 
     <!-- The Modal -->
-    <div id="myModal" class="modal">
+   <!--  <div id="myModal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
           <span class="close" style="font-size: 28px;font-weight: bold;">&times;</span>
@@ -53,7 +53,7 @@
           <button class="close">Close</button>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
