debugging error camera 2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <body style='margin: 0; overflow: hidden;'>
-    <div id="splash" style="width: 100vw; height:100vh; margin: auto;"></div>
+    <!-- <div id="splash" style="width: 100vw; height:100vh; margin: auto;"></div> -->
     
     <a-scene
         cursor='rayOrigin: mouse; fuse: true; fuseTimeout: 0;'
