click event demo 3

--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 
 <!-- <link rel="stylesheet" href="../../src/location-based/stylesheets/index.css"> -->
 
-<!-- Dynamically add places from Javascript -->
-
-
 <body style='margin: 0; overflow: hidden;'>
     <div id="splash" style="width: 100vw; height:100vh; margin: auto;"></div>
     
@@ -39,7 +36,7 @@
     </div>
 
     <!-- The Modal -->
-    <div id="myModal" class="modal">
+    <div id="helpModal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
           <span class="close" style="font-size: 28px;font-weight: bold;">&times;</span>
@@ -48,6 +45,22 @@
         <div class="modal-body">
           <h1 style="color: grey; font-size: 25px; text-align: center;">Pan over the campus buildings</h1>
           <img src="movement.gif" style="display: block; margin-left: auto; margin-right: auto; width: 100px;">
+        </div>
+        <div class="modal-footer">
+          <button class="close">Close</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- modal about a place -->
+    <div id="abtPlaceModal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close" style="font-size: 28px;font-weight: bold;">&times;</span>
+          <h2>Place A</h2>
+        </div>
+        <div class="modal-body">
+          
         </div>
         <div class="modal-footer">
           <button class="close">Close</button>
