--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
     <div id="abtPlaceModal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
-          <span class="close" style="font-size: 28px;font-weight: bold;">&times;</span>
+          <span class="abtClose" style="font-size: 28px;font-weight: bold;">&times;</span>
           <h2>Place A</h2>
         </div>
         <div class="modal-body">
           
         </div>
         <div class="modal-footer">
-          <button class="close">Close</button>
+          <button class="abtClose">Close</button>
         </div>
       </div>
     </div>
