print Lat Long in abt place modal

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
           <h2>Place A</h2>
         </div>
         <div class="modal-body">
+            <div id="latLong"></div>
           
         </div>
         <div class="modal-footer">
