abtPlaceModal change name

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <span class="abtClose" style="font-size: 28px;font-weight: bold;">&times;</span>
-          <h2>Place A</h2>
+          <h2 id="placeName">Place A</h2>
         </div>
         <div class="modal-body">
             <div id="latLong"></div>
