--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
 
     <!-- Trigger/Open The Modal -->
     <div class="footer">
-
+      <div id="dist2">
+        </div> 
       <button ><i class="material-icons">home</i></button>
       <button id="helpBtn"><i class="material-icons">help</i></button>
+    </div>
+    <div id="header">
+         
     </div>
 
     <!-- The Modal -->
