--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h2>Welcome to ExplorAR</h2>
         </div>
         <div class="modal-body">
-          <h1 style="color: grey; font-size: 25px; text-align: center;">Where do you want to go today?</h1>
+          <h1 style="color: grey; font-size: 25px; text-align: center;">Where to ?</h1>
           <div id="options" >
 
             <!-- -------------------------options will be added according to places array in places.js -->
@@ -68,19 +68,21 @@
       <div class="modal-content">
         <div class="modal-header">
           <span class="close closeIcon" id="close" style="font-size: 28px;font-weight: bold;">&times;</span>
-          <h2>NavigatAR Guide</h2>
+          <h2>ExplorAR Guide</h2>
         </div>
-        <div class="modal-body">
+        <div class="modal-body" style="overflow: scroll; height: 400px;">
           <h1 style="color: grey; font-size: 25px; text-align: center;"></h1>
-          <p>Our app ExplorAR will help you reach any IIITD building!
-          Make sure you follow the following steps in order to use ExplorAR:
-          1) Ensure that you have an internet connection.
-          2) Ensure that your GPS is turned on.
-          3) Please allow access to your location when prompted.
-          4) When your camera opens up, you are ready to use ExplorAR! The default screen is Explore, where you can see pointers for all the buildings.
-          5) You can search for a specific building by clicking on the Search icon (magnifier), choose which building you want to go to from the menu. Once you choose your destination, ExplorAR tells you the distance(in metres) between you and your destination. Note: Distance shown may not be 100% accurate because of GPS instability.
+          <p>
+          <span style="color: #3581B8; font-weight: bold;"> ExplorAR will help you reach any IIITD building!</span>
+          <br>
+          Make sure you follow the following steps in order to use ExplorAR:<br>
+          1) Ensure that you have an internet connection.<br>
+          2) Ensure that your GPS is turned on.<br>
+          3) Please allow access to your location when prompted.<br>
+          4) When your camera opens up, you are ready to use ExplorAR! When you hold your phone vertically, you can see pointers for all the buildings, denoting their locations. You can click on the pointer to your desired location which then displays distance between you and your destination.<br>
+          5) You can search for a specific building by clicking on the Search icon (magnifier) and choose which building you want to go to from the menu. Once you choose your destination, ExplorAR tells you the distance(in metres) between you and your destination. Note: Distance shown may not be 100% accurate because of GPS instability.<br>
 
-          Here is a sample demonstration of how to use ExplorAR.
+          <span style="color: grey; font-weight: lighter;">Developed and Designed by: Kyzyl, Aman, Vaibhav & Akshat</span>
           </p>
 <Insert GIF>
           <img src="Banners/movement.gif" style="display: block; margin-left: auto; margin-right: auto; width: 100px;">
@@ -117,47 +119,56 @@
     <div id="onbModal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
-          <span class="close3 closeIcon" id="close" style="font-size: 28px;font-weight: bold;">&times;</span>
-          <h2>NavigatAR Guide</h2>
+          <span class="close3 closeIcon" id="close" style="font-size: 28px; font-weight: bold;">&times;</span>
+          <h2>ExplorAR Guide</h2>
         </div>
         <div class="modal-body">
           
           <div class="slideshow-container">
-            <div class="mySlides fade">
-              <div class="numbertext">1 / 4</div>
-              <div class="onb onb1" style="width: 100%; height: 400px; vertical-align: middle; text-align: center;"><p>New to the campus?<br>We will guide you!</p></div>
+            <div class="mySlides">
+              <!-- <div class="numbertext">1 / 3</div> -->
+              <div class="onb onb1" style="width: 100%; height: 35%; vertical-align: middle; text-align: center;">
+              <p>
+                <span style="color: #3581B8; font-weight: bold;">New to the campus?<br>We will guide you!</span><br>
+                <i class="material-icons" style="font-size: 70px;">explore</i><br>
+                Hold your phone vertically to see pointers to all buildings. Tap on it to know how far it is.<br>
+              </p>
+              </div>
             </div>
 
-            <div class="mySlides fade">
-              <div class="numbertext">2 / 4</div>
-              <div class="onb onb1" style="width: 100%; height: 400px; vertical-align: middle; text-align: center;"><p> Explore the campus</p></div>
+            <div class="mySlides">
+              <!-- <div class="numbertext">2 / 3</div> -->
+              <div class="onb onb2" style="width: 100%; height: 35%; vertical-align: middle; text-align: center;">
+              <p>
+                 <span style="color: #3581B8; font-weight: bold;">Search for a specific location</span><br>
+                <i class="material-icons" style="font-size: 70px;">search</i><br>
+                Choose your destination, we will tell you how far you need to go.
+               </p>
+              </div>
             </div>
 
-            <div class="mySlides fade">
-              <div class="numbertext">3 / 4</div>
-              <div class="onb onb1" style="width: 100%; height: 400px; vertical-align: middle; text-align: center;"><p>Works best in potrait mode. Pan your device.</p></div>
+            <div class="mySlides">
+              <!-- <div class="numbertext">3 / 3</div> -->
+              <div class="onb onb4" style="width: 100%; height: 35%; vertical-align: middle; text-align: center;">
+              <p>
+               <span style="color: #3581B8; font-weight: bold;">Just to wrap up...</span><br>
+               <i class="material-icons" style="font-size: 70px;">help</i><br>
+                Works best in portrait mode.<br>Check out <br> whenever you need help!</p> </div>
             </div>
 
-            <div class="mySlides fade">
-              <div class="numbertext">4 / 4</div>
-              <div class="onb onb1" style="width: 100%; height: 400px; vertical-align: middle; text-align: center;">keep an eye</div>
-            </div>
-
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            <a class="prev" id="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" id="next" onclick="plusSlides(1)">&#10095;</a>
 
           </div>
           <div style="text-align:center">
             <span class="dot" onclick="currentSlide(1)"></span> 
             <span class="dot" onclick="currentSlide(2)"></span> 
             <span class="dot" onclick="currentSlide(3)"></span> 
-            <span class="dot" onclick="currentSlide(4)"></span> 
           </div>
 
         </div>
         <div class="modal-footer">
           <button class="close3" id="close">Skip</button>
-          <button>Next</button>
         </div>
       </div>
     </div>
